--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ travis-ci = { repository = "mgattozzi/github-rs", branch = "master" }
 appveyor = { repository = "mgattozzi/github-rs", branch = "master", service = "github" }
 
 [dependencies]
+antidote = "1.0.0"
 hyper = "0.11"
 hyper-rustls = { version = "0.12", optional = true }
 hyper-tls = { version = "0.1", optional = true }
